intercom-attributes/tests/data/ui/span-comimpl-no-interface.rs.stderr
error[E0425]: cannot find function `__S_NotComTrait_AutomationVtbl_offset` in this scope
  --> span-comimpl-no-interface.rs:10:6
   |
10 | impl NotComTrait for S {}
   |      ^^^^^^^^^^^ help: a constant with a similar name exists: `__S_NotComTrait_AutomationVtbl_INSTANCE`

error[E0412]: cannot find type `__NotComTrait_AutomationVtbl` in this scope
  --> span-comimpl-no-interface.rs:10:6
   |
10 | impl NotComTrait for S {}
   |      ^^^^^^^^^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `__NotComTrait_AutomationVtbl` in this scope
  --> span-comimpl-no-interface.rs:10:6
   |
10 | impl NotComTrait for S {}
   |      ^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `__S_NotComTrait_RawVtbl_offset` in this scope
  --> span-comimpl-no-interface.rs:10:6
   |
10 | impl NotComTrait for S {}
   |      ^^^^^^^^^^^ help: a constant with a similar name exists: `__S_NotComTrait_RawVtbl_INSTANCE`

error[E0412]: cannot find type `__NotComTrait_RawVtbl` in this scope
  --> span-comimpl-no-interface.rs:10:6
   |
10 | impl NotComTrait for S {}
   |      ^^^^^^^^^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `__NotComTrait_RawVtbl` in this scope
  --> span-comimpl-no-interface.rs:10:6
   |
10 | impl NotComTrait for S {}
   |      ^^^^^^^^^^^ not found in this scope

error[E0277]: the trait bound `(dyn NotComTrait + 'static): intercom::ComInterface` is not satisfied
  --> span-comimpl-no-interface.rs:10:1
   |
10 | impl NotComTrait for S {}
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `intercom::ComInterface` is not implemented for `(dyn NotComTrait + 'static)`

error[E0277]: the trait bound `S: intercom::CoClass` is not satisfied
  --> span-comimpl-no-interface.rs:10:1
   |
10 | impl NotComTrait for S {}
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `intercom::CoClass` is not implemented for `S`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0277, E0412, E0422, E0425.
For more information about an error, try `rustc --explain E0277`.
